--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -619,85 +619,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n",
-      "39170\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the Totals (Schools and Students)\n",
     "school_count = len(school_data_complete_df[\"school_name\"].unique())\n",
-    "student_count = school_data_complete_df[\"Student ID\"].count()\n",
-    "\n",
-    "print(school_count)\n",
-    "print(student_count)\n"
+    "student_count = school_data_complete_df[\"Student ID\"].count()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24649428\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the Total Budget\n",
-    "total_budget = school_data_df[\"budget\"].sum()\n",
-    "\n",
-    "print(total_budget)"
+    "total_budget = school_data_df[\"budget\"].sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "81.85579580976001\n",
-      "78.93053295099331\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the Average reading and math scores using the \"clean_student_data\".\n",
     "average_reading_score = school_data_complete_df[\"reading_score\"].mean()\n",
-    "average_math_score = school_data_complete_df[\"math_score\"].mean()\n",
-    "\n",
-    "print(average_reading_score)\n",
-    "print(average_math_score)\n"
+    "average_math_score = school_data_complete_df[\"math_score\"].mean()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "461\n",
-      "39170\n",
-      "38709\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 1. Get the number of students that are in ninth grade at Thomas High School.\n",
     "# These students have no grades. \n",
@@ -712,50 +668,25 @@
     "\n",
     "# Step 2. Subtract the number of students that are in ninth grade at \n",
     "# Thomas High School from the total student count to get the new total student count.\n",
-    "new_student_count = student_count - student_count_ths_9th\n",
-    "\n",
-    "print(student_count_ths_9th)\n",
-    "print(student_count)\n",
-    "print(new_student_count)\n"
+    "new_student_count = student_count - student_count_ths_9th\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28939\n",
-      "33158\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the passing rates using the \"clean_student_data\".\n",
     "passing_math_count = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)].count()[\"student_name\"]\n",
-    "passing_reading_count = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
-    "\n",
-    "print(passing_math_count)\n",
-    "print(passing_reading_count)"
+    "passing_reading_count = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "74.76039164018704\n",
-      "85.6596657108166\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 3. Calculate the passing percentages with the new total student count.\n",
     "\n",
@@ -763,26 +694,14 @@
     "passing_math_percentage = passing_math_count/float(new_student_count) * 100\n",
     "\n",
     "# Calculate the percent that passed reading.\n",
-    "passing_reading_percentage = passing_reading_count/float(new_student_count) * 100\n",
-    "\n",
-    "print(passing_math_percentage)\n",
-    "print(passing_reading_percentage)\n"
+    "passing_reading_percentage = passing_reading_count/float(new_student_count) * 100\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25105\n",
-      "64.85571830840374\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the students who passed both reading and math.\n",
     "passing_math_reading = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)\n",
@@ -793,16 +712,12 @@
     "\n",
     "\n",
     "# Step 4.Calculate the overall passing percentage with new total student count.\n",
-    "overall_passing_percentage = overall_passing_math_reading_count/float(new_student_count) * 100\n",
-    "\n",
-    "#print(passing_math_reading)\n",
-    "print(overall_passing_math_reading_count)\n",
-    "print(overall_passing_percentage)"
+    "overall_passing_percentage = overall_passing_math_reading_count/float(new_student_count) * 100\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +775,7 @@
        "0                  81.9           74.8              85.7              64.9  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1174,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,30 +1190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1174\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 5.  Get the number of 10th-12th graders from Thomas High School (THS).\n",
     "student_ths_10th_to_12th = school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & \n",
     "                                                    (school_data_complete_df[\"grade\"]!=\"9th\"), [\"Student ID\"]]\n",
     "\n",
-    "student_count_ths_10th_to_12th = student_ths_10th_to_12th[\"Student ID\"].count() \n",
-    "\n",
-    "print(student_count_ths_10th_to_12th)"
+    "student_count_ths_10th_to_12th = student_ths_10th_to_12th[\"Student ID\"].count() \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1430,7 @@
        "[1094 rows x 11 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1671,7 @@
        "[1139 rows x 11 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +1912,7 @@
        "[1064 rows x 11 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2023,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2037,12 +1942,13 @@
    "source": [
     "# Step 9. Calculate the percentage of 10th-12th grade students passing math from Thomas High School. \n",
     "per_school_passing_math_THS = per_school_passing_math_THS[\"Student ID\"].count() / student_count_ths_10th_to_12th * 100\n",
-    "print(per_school_passing_math_THS)"
+    "\n",
+    "#print(per_school_passing_math_THS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2056,12 +1962,13 @@
    "source": [
     "# Step 10. Calculate the percentage of 10th-12th grade students passing reading from Thomas High School.\n",
     "per_school_passing_reading_THS = per_school_passing_reading_THS[\"Student ID\"].count() / student_count_ths_10th_to_12th * 100\n",
-    "print(per_school_passing_reading_THS)"
+    "\n",
+    "#print(per_school_passing_reading_THS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2075,12 +1982,13 @@
    "source": [
     "# Step 11. Calculate the overall passing percentage of 10th-12th grade from Thomas High School. \n",
     "per_school_passing_math_reading_THS = per_school_passing_math_reading_THS[\"Student ID\"].count() / student_count_ths_10th_to_12th * 100\n",
-    "print(per_school_passing_math_reading_THS)\n"
+    "\n",
+    "#print(per_school_passing_math_reading_THS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2100,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2110,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2400,7 +2308,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2419,7 +2327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -2551,7 +2459,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2565,7 +2473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2695,7 +2603,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2718,7 +2626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2745,7 +2653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2912,7 +2820,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2930,7 +2838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3097,7 +3005,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3115,7 +3023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3140,7 +3048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3299,7 +3207,7 @@
        "Wright High School     83.3  84.0  83.8  83.6"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3314,7 +3222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3473,7 +3381,7 @@
        "Wright High School     83.8  83.8  84.2  84.1"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3495,7 +3403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3818,7 +3726,7 @@
        "Wright High School                            <$584  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3836,7 +3744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3854,7 +3762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3953,7 +3861,7 @@
        "$645-675                               53.526855  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3972,7 +3880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -4071,7 +3979,7 @@
        "$645-675                                     54  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4100,7 +4008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -4439,7 +4347,7 @@
        "Wright High School                            <$584  Medium (1000-2000)  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4457,7 +4365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4475,7 +4383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -4559,7 +4467,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4578,7 +4486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -4660,7 +4568,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4689,7 +4597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4707,7 +4615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -4779,7 +4687,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4798,7 +4706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -4870,7 +4778,7 @@
        "District                   81                54  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
