--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -4745,7 +4745,7 @@
     }
    ],
    "source": [
-    "# # Format the DataFrame \n",
+    "# # Format the type summary DataFrame \n",
     "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
     "\n",
     "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
